--- a/assets/css/main-cleaned.css
+++ b/assets/css/main-cleaned.css
@@ -1,69 +1,21 @@
+/* GENERAL */
+
+/* MAIN */
+
+
+
 /* FAQ */
 /* Accordion */
-.tabs {
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.5);
-}
-
-.tab {
-    width: 100%;
-    color: white;
-    overflow: hidden;
-}
-
-.tab-label {
-    display: flex;
-    justify-content: space-between;
-    padding: 1em;
-    background: #fff;
-    font-weight: bold;
+.accordion-header {
     cursor: pointer;
-   /* Icon */
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 5px;
 }
 
-.tab-label:hover {
-    background: #e6e6e6;
-}
-
-.tab-label::after {
-    content: "\276F";
-    width: 1em;
-    height: 1em;
-    text-align: center;
-    transition: all 0.35s;
-}
-
-.tab-content {
-    max-height: 0;
-    padding: 0 1em;
-    color: #fff;
-    background: white;
-    transition: all 0.35s;
-}
-
-.tab-close {
-    display: flex;
-    justify-content: flex-end;
-    padding: 1em;
-    font-size: 0.75em;
-    background: #fff;
-    cursor: pointer;
-}
-
-.tab-close:hover {
-    background: #e6e6e6;
-}
-
-input:checked + .tab-label {
-    background: #e6e6e6;
-}
-
-input:checked + .tab-label::after {
-    transform: rotate(90deg);
-}
-
-input:checked ~ .tab-content {
-    max-height: 100vh;
-    padding: 1em;
+.accordion-content {
+    display: none;
+    border: none;
+    padding: 10px;
+    margin: 5px;
 }
