--- a/refactor/assets/css/main.css
+++ b/refactor/assets/css/main.css
@@ -1,5 +1,217 @@
 /* GENERAL */
+html {
+    line-height: 1.15;
+    -webkit-text-size-adjust: 100%
+}
 
+body {
+    margin: 0
+}
+
+h1 {
+    font-size: 2em;
+    margin: .67em 0
+}
+
+hr {
+    box-sizing: content-box;
+    height: 0;
+    overflow: visible
+}
+
+pre {
+    font-family: monospace, monospace;
+    font-size: 1em
+}
+
+abbr[title] {
+    border-bottom: none;
+    text-decoration: underline;
+    -webkit-text-decoration: underline dotted;
+    text-decoration: underline dotted
+}
+
+b,
+strong {
+    font-weight: bolder
+}
+
+code,
+kbd,
+samp {
+    font-family: monospace, monospace;
+    font-size: 1em
+}
+
+small {
+    font-size: 80%
+}
+
+sub,
+sup {
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline
+}
+
+sub {
+    bottom: -0.25em
+}
+
+sup {
+    top: -0.5em
+}
+
+img {
+    border-style: none
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+    font-family: inherit;
+    font-size: 100%;
+    line-height: 1.15;
+    margin: 0
+}
+
+button,
+input {
+    overflow: visible
+}
+
+button,
+select {
+    text-transform: none
+}
+
+button,
+[type=button],
+[type=reset],
+[type=submit] {
+    -webkit-appearance: button;
+}
+
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
+    border-style: none;
+    padding: 0
+}
+
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+    outline: 1px dotted ButtonText
+}
+
+fieldset {
+    padding: .35em .75em .625em
+}
+
+legend {
+    box-sizing: border-box;
+    color: inherit;
+    display: table;
+    max-width: 100%;
+    padding: 0;
+    white-space: normal
+}
+
+progress {
+    vertical-align: baseline
+}
+
+textarea {
+    overflow: auto
+}
+
+[type=checkbox],
+[type=radio] {
+    box-sizing: border-box;
+    padding: 0
+}
+
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
+    height: auto
+}
+
+[type=search] {
+    -webkit-appearance: textfield;
+    outline-offset: -2px
+}
+
+[type=search]::-webkit-search-decoration {
+    -webkit-appearance: none
+}
+
+::-webkit-file-upload-button {
+    -webkit-appearance: button;
+    font: inherit
+}
+
+details {
+    display: block
+}
+
+summary {
+    display: list-item
+}
+
+template {
+    display: none
+}
+
+[hidden] {
+    display: none
+}
+
+* {
+    box-sizing: border-box;
+    outline: none
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+    outline: none
+}
+
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    outline: none
+}
+
+button:focus,
+button:active {
+    color: inherit;
+    text-decoration: none;
+    outline: none
+}
+
+ol,
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0
+}
 
 /* MAIN */
 
@@ -344,6 +556,47 @@
 
 #main-header .sticky.new-navbar.bg-white .menu-header-menu-container #primary-menu {
     color: #3d3d3d
+}
+
+body.page-template-blog #main-header .sticky,
+body.category #main-header .sticky,
+body.tag #main-header .sticky,
+body.single-post #main-header .sticky,
+body.author #main-header .sticky,
+body.recipes-template-default #main-header .sticky,
+body.search #main-header .sticky {
+    background-color: #ececf0
+}
+
+body.page-template-blog #main-header .sticky .container .logo,
+body.category #main-header .sticky .container .logo,
+body.tag #main-header .sticky .container .logo,
+body.single-post #main-header .sticky .container .logo,
+body.author #main-header .sticky .container .logo,
+body.recipes-template-default #main-header .sticky .container .logo,
+body.search #main-header .sticky .container .logo {
+    max-width: 300px;
+    padding: 10px 0
+}
+
+body.page-template-blog #main-header .sticky .container.open ul,
+body.category #main-header .sticky .container.open ul,
+body.tag #main-header .sticky .container.open ul,
+body.single-post #main-header .sticky .container.open ul,
+body.author #main-header .sticky .container.open ul,
+body.recipes-template-default #main-header .sticky .container.open ul,
+body.search #main-header .sticky .container.open ul {
+    right: 0
+}
+
+body.page-template-blog #main-header #close,
+body.category #main-header #close,
+body.tag #main-header #close,
+body.single-post #main-header #close,
+body.author #main-header #close,
+body.recipes-template-default #main-header #close,
+body.search #main-header #close {
+    filter: brightness(0.5)
 }
 
 /* FAQ */
